<resources>
    <string name="app_name">Bible Story Video Producer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_info">Registration Info</string>
    <string name="menu_search">Search</string>
    <string name="setup_langcode_hint">Language Code</string>
    <string name="setup_countries_hint">Country(s)</string>
    <string name="setup_teamname_hint">Team Name</string>
    <string name="setup_teamcontact_hint">Contact Name</string>
    <string name="setup_consname_hint">Consultant Name</string>
    <string name="setup_consphone_hint">Consultant Phone</string>
    <string name="setup_consemail_hint">Consultant Email</string>
    <string name="title_activity_story_templates">StoryTemplates</string>
    <string name="title_activity_info_page">InfoPage</string>

    /*String names for Info Page*/
    <string name="hello_world">Hello world!</string>
    <string name="consultant_phone">"Consultant Phone:  "</string>
    <string name="consultant_email">"Consultant Email:  "</string>
    <string name="consultant_name">"Consultant Name:  "</string>
    <string name="translator_contact_name">"Translation Team Contact:  "</string>
    <string name="translator_team_name">"Translation Team Name:  "</string>
    <string name="country">"Country:  "</string>
    <string name="language_code">"Language Code:  "</string>
    <string name="language">"Language:  "</string>
</resources>
