<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bsv.www.biblestoryvideoproducer.InfoPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/language_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language" />

            <TextView
                android:id="@+id/language_code_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_code" />

            <TextView
                android:id="@+id/country_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <TextView
                android:id="@+id/translator_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translator_team_name" />

            <TextView
                android:id="@+id/team_contact_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translator_contact_name" />

            <TextView
                android:id="@+id/consultant_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultant_name"  />

            <TextView
                android:id="@+id/consultant_email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultant_email" />

            <TextView
                android:id="@+id/consultant_phone_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultant_phone" />

            </LinearLayout>
        </ScrollView>
</RelativeLayout>
